.github/README: create .deb, publish it to packagecloud; increment version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,17 @@ jobs:
     uses: lpenz/ghworkflow-rust/.github/workflows/rust.yml@v0.15.0
     with:
       coveralls: true
+      deb: true
       publish_cratesio: true
       publish_github_release: true
+      publish_github_release_files: |
+        target/release/stdecor
+      publish_packagecloud: true
+      publish_packagecloud_repository: |
+        ["debian/debian/bullseye",
+         "debian/debian/bookworm",
+         "ubuntu/ubuntu/kinetic",
+         "ubuntu/ubuntu/focal"]
     secrets:
       CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
