--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tokio-process-stream = "0.4.0"
 color-eyre = "0.6.2"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
+terminal_size = "0.2.6"
 
 [dependencies.chrono]
 version = "0.4.26"
