--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,12 @@ keywords = ["command-line"]
 
 [dependencies]
 clap = { version = "4.3.8", features = ["derive"] }
-tokio = { version = "1.28.2", features = ["io-std"] }
-tokio-stream = "0.1.14"
-tokio-process-stream = "0.4.0"
 color-eyre = "0.6.2"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
 terminal_size = "0.2.6"
+polling = "2.8.0"
+memchr = "2.5.0"
 
 [dependencies.chrono]
 version = "0.4.26"
