--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,20 @@ jobs:
   omnilint:
     uses: lpenz/omnilint/.github/workflows/omnilint.yml@v0.5.2
   rust:
-    uses: lpenz/ghworkflow-rust/.github/workflows/rust.yml@v0.23.4
+    uses: lpenz/ghworkflow-rust/.github/workflows/rust.yml@v0.24.0
     with:
       coveralls: true
       deb: true
+      rpm: true
       publish_cratesio: true
       publish_github_release: true
       publish_github_release_files: |
         target/release/stdecor target/release/stdecor.1
-      publish_packagecloud: true
-      publish_packagecloud_repository: |
+      publish_packagecloud_repository_deb: |
         ["debian/debian/bookworm",
          "ubuntu/ubuntu/noble"]
+      publish_packagecloud_repository_rpm: |
+        ["rpm/rpm_any/rpm_any"]
     secrets:
       CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
       PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
