--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,12 @@ assets = [
     ["AUTHORS", "usr/share/doc/stdecor/", "644"],
     ["README.md", "usr/share/doc/stdecor/", "644"],
 ]
+
+[package.metadata.generate-rpm]
+assets = [
+    { source = "target/release/stdecor.1", dest = "/usr/share/man/man1/", mode = "644" },
+    { source = "target/release/stdecor", dest = "/usr/bin/", mode = "755" },
+    { source = "LICENSE", dest = "/usr/share/doc/stdecor/", mode = "644" },
+    { source = "AUTHORS", dest = "/usr/share/doc/stdecor/", mode = "644" },
+    { source = "README.md", dest = "/usr/share/doc/stdecor/", mode = "644" },
+]
