--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       publish_github_release_files: |
         target/release/stdecor target/release/stdecor.1
       publish_packagecloud_repository_deb: |
-        ["debian/debian/bookworm",
+        ["debian/debian/trixie",
          "ubuntu/ubuntu/noble"]
       publish_packagecloud_repository_rpm: |
         ["rpm/rpm_any/rpm_any"]
